Fix top padding on mobile

--- a/public/app.css
+++ b/public/app.css
@@ -23,7 +23,7 @@ big-block p, big-block h1 {
 @media only screen and (max-width: 600px) {
   big-block {
     width: 100%;
-    margin: auto 5px;
+    margin: 1em 5px 0px 5px;
     text-align: left;
     font-size: 1.75em;
   }
